# AspenPyLib

./: .gitattributes  .gitignore  Optimisation_code.py  README.md  cstr-ch4.apw  io.py  main.py  minWorkingExample.apw  pyproject.toml  readme.md
OpenPyTEA/: README.txt  analysis.py  case_study_1.ipynb  equipment.py  plant.py  requirements.txt
Tests/: Aspen_test.py  conftest.py
aspen_files/: Hierarchy.apw  Test100kw.apw  cstr-ch4.apw
src/: aspen.py  aspenOptimizationLib.py
